# docs/api/openapi.yaml
@@ -23,6 +23,9 @@ paths:
       summary: Returns a list of users
       operationId: getUsers
       tags: [Users]
+      security:
+        - apiKeyAuth: []
+        - sessionToken: []
       responses:
         '200':
           description: A list of users
@@ -329,6 +332,7 @@ paths:
       summary: Retrieve an access token
       operationId: authLogin
       tags: [Auth]
+      security: []
       requestBody:
           content:
             application/json:
@@ -346,7 +350,15 @@ paths:
                     example: password123!
       responses:
         '200':
-          description: Successfully logged in
+          description: >
+            Successfully authenticated.
+            The session ID is returned in a cookie named `heimdall_sessionToken`.
+            This cookie must be included in subsequent requests.
+          headers: 
+            Set-Cookie:
+              schema: 
+                type: string
+                example: heimdall_sessionToken=XdMIzEPHxFcFyVGnzpUkHLZZP0/VEftTqI/+9CaarhE=; Path=/; Max-Age=86400; HttpOnly; Secure; SameSite=Lax
           content:
             application/json:
               schema: 
@@ -369,6 +381,39 @@ paths:
                   error:
                     type: string
                     example: invalid password
+
+  /auth/logout:
+    post:
+      summary: End an existing session
+      operationId: authLogout
+      tags: [Auth]
+      security: 
+        - sessionCookie: []
+      responses:
+        '204':
+          description: >
+            Session ended.
+            The session token associated with the request will be invalidated and
+            all subsequent requests with the token will fail authentication.
+          headers: 
+            Set-Cookie:
+              schema: 
+                type: string
+                example: heimdall_sessionToken=; Path=/; Max-Age=0; HttpOnly; Secure
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    enum: [500]
+                    example: 500
+                  error:
+                    type: string
+                    example: Internal Server Error
 
   /auth/introspect:
     post:
@@ -535,3 +580,13 @@ components:
       type: string
       format: date-time
       example: 2023-01-01T00:00:00Z
+
+  securitySchemes:
+    apiKeyAuth:
+      type: apiKey
+      in: header
+      name: X-API-KEY
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: heimdall_sessionToken
